# telekomuna

./: README.md
zad1/: CMakeLists.txt  colors.h  decoded.txt  encoded.txt  main.cpp  util.cpp  util.h  zadanie.txt
zad1/karwowski/: binary.cpp  binary.h  decoded  encoded  kod1.h  kod2.h  main.cpp  sprawozdanie.odt  test
zad2/: CMakeLists.txt  global_consts.h  main.cpp  message.txt  message_lorem.txt  nasz_main.cpp  receiver.cpp  receiver.h  sender.cpp  sender.h  utility.cpp  utility.h
zad3/: CMakeLists.txt  main.cpp  notatki.txt  pom.xml
zad3/Anon2/: main.cpp
zad3/Karwowski/: CMakeLists.txt
zad3/Karwowski/include/: ReaderWriter.h
zad3/Karwowski/src/: ReaderWriter.cpp  main.cpp
zad3/Kowalewski/: CMakeLists.txt  Console_output.txt  main.cpp
zad3/src/main/java/: BinaryTree.java  BinaryTreeComparator.java  Huffman.java  Main.java  Receiver.java  Sender.java
zad4/: CMakeLists.txt  main.cpp  winMain.h
zad4/zad4_pretty/: pom.xml
zad4/zad4_pretty/src/main/java/: module-info.java
zad4/zad4_pretty/src/main/java/tele/: App.java  Controller.java  Main.java
zad4/zad4_safe/: pom.xml
zad4/zad4_safe/src/main/java/: Main.java  Player.java  Recorder.java  TUI.java
